# odb-sqlite3-win

./: READEME.md
doc/: ODB Sqlite3 Windows 平台环境搭建（使用 CMake）.md
odb/: .gitignore  CMakeLists.txt
odb/libodb-2.4.0/: CMakeLists.txt
odb/libodb-sqlite-2.4.0/: CMakeLists.txt
odb/libodb-sqlite-2.4.0/odb/sqlite/: libodb-sqlite-vc12.vcxproj
odb/sqlite-amalgamation-3470200/: CMakeLists.txt
test/: .gitignore  CMakeLists.txt  _clang-format  main.cpp
