
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

set(TARGET_NAME sqlite3)

project(${TARGET_NAME} C)

add_definitions(-DSQLITE_ENABLE_UNLOCK_NOTIFY)

# 查找所有源文件
file(GLOB  SOURCES 
${CMAKE_CURRENT_LIST_DIR}/*.c)

file(GLOB HEADERS 
${CMAKE_CURRENT_LIST_DIR}/*.h 
)

set(CMAKE_DEBUG_POSTFIX "-d")

add_library(${TARGET_NAME} SHARED ${SOURCES} ${HEADERS})

install(TARGETS ${TARGET_NAME} 
RUNTIME DESTINATION runtime
ARCHIVE DESTINATION lib)
install(FILES sqlite3.h
        DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
